--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": "^8.2",
         "nette/robot-loader": "^3.4",
         "smarty/smarty": "^4.5.2",
         "slim/slim": "4.13.*",
@@ -42,19 +43,22 @@
         "robmorgan/phinx": "^0.12.10"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^v3.5.0",
+        "phpunit/phpunit": "^9.0",
+        "friendsofphp/php-cs-fixer": "^v3.54.0",
         "overtrue/phplint": "^4.1.0",
         "phpstan/phpstan": "^1.4.2",
         "squizlabs/php_codesniffer": "*",
         "symfony/var-dumper": "^v6.0.2",
         "symplify/easy-coding-standard": "^v12.1",
-        "symplify/coding-standard": "^v12.1"
+        "symplify/coding-standard": "^v12.1",
+        "mockery/mockery": "^1.0"
+    },
+    "suggest": {
+        "illuminate/database": "By default, Sentinel utilizes the powerful Illuminate database layer.",
+        "illuminate/events": "To hook into various events across Sentinel, we recommend using Illuminate's event dispatcher.",
+        "symfony/http-foundation": "Required for native implementations."
     },
     "scripts": {
-        "cleanup": [
-            "phpcbf",
-            "vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --show-progress=dots -vvv"
-        ],
         "dump": "composer dump-autoload -a",
         "post-update-cmd": "composer dump-autoload -o",
         "create-migration": "vendor/bin/phinx create -c config/phinx.php --ansi -- ",
@@ -63,6 +67,9 @@
         "phplint": "phplint --no-cache",
         "phpstan": "vendor/phpstan/phpstan/phpstan.phar analyse",
         "phpcbf": "phpcbf",
-        "phpcs": "phpcs -s"
+        "phpcs": "phpcs -s",
+        "cs:check": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots --diff --dry-run",
+        "cs:fix": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots",
+        "test": "vendor/phpunit/phpunit/phpunit --colors=always"
     }
 }
