--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ adminator3/.phpunit.result.cache
 adminator3/build/
 adminator3/export/
 adminator3/tests2/
+adminator3/phpunit.xml.bak
+adminator3/.phpunit.cache/
