--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -62,7 +62,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-          "App\\Tests\\": "tests/slim",
+          "App\\Controllers\\": "app\\Controllers",
           "DI\\Test\\UnitTest\\Fixtures\\": "tests/php-di"
         }
     },
