--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -53,7 +53,8 @@
         "symplify/coding-standard": "^v12.1",
         "mockery/mockery": "^1.0",
         "phpspec/prophecy-phpunit": "^2.2",
-        "mnapoli/phpunit-easymock": "^1.3"
+        "mnapoli/phpunit-easymock": "^1.3",
+        "misantron/dbunit": "^5.3"
     },
     "suggest": {
         "illuminate/database": "By default, Sentinel utilizes the powerful Illuminate database layer.",
