--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -54,7 +54,8 @@
         "mockery/mockery": "^1.0",
         "phpspec/prophecy-phpunit": "^2.2",
         "mnapoli/phpunit-easymock": "^1.3",
-        "misantron/dbunit": "^5.3"
+        "misantron/dbunit": "^5.3",
+        "php-mock/php-mock-phpunit": "^2.10"
     },
     "suggest": {
         "illuminate/database": "By default, Sentinel utilizes the powerful Illuminate database layer.",
