--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -65,7 +65,7 @@
     "autoload-dev": {
         "psr-4": {
           "App\\Controllers\\": "app\\Controllers",
-          "DI\\Test\\UnitTest\\Fixtures\\": "tests/php-di/fixtures"
+          "DI\\Test\\UnitTest\\Fixtures\\": "tests/php-di/Fixtures"
         }
     },
     "scripts": {
