--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -13,8 +13,11 @@ parameters:
 		message: "#^Variable \\$.* might not be defined\\.$#"
 		path: *
 	-
-		message: "#^Function mysql_.* not found\\.$#"
+		message: "#^Function (mysql|ereg)_.* not found\\.$#"
 		path: print/*.php
 	-
 		message: "#^Function mysql_.* not found\\.$#"
 		path: include/main.function.shared.php
+	-
+		message: "#^Function mysql_.* not found\\.$#"
+		path: app/Core/shared/voip.class.php
