--- a/.github/workflows/1.build-container.yml
+++ b/.github/workflows/1.build-container.yml
@@ -13,15 +13,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v3
       -
         name: Build
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: false
-          tags: hsoftware/isp-net-adminator:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # tags: hsoftware/isp-net-adminator:latest
