--- a/.github/workflows/1.build-container.yml
+++ b/.github/workflows/1.build-container.yml
@@ -14,13 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - uses: docker/setup-buildx-action@v3
+
+      # https://docs.docker.com/build/cache/backends/gha/#using-dockerbuild-push-action
       -
         name: Build
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          # tags: hsoftware/isp-net-adminator:latest
+          tags: hsoftware/isp-net-adminator:latest
