--- a/.github/workflows/1.build-container.yml
+++ b/.github/workflows/1.build-container.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # - uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       # https://docs.docker.com/build/cache/backends/gha/#using-dockerbuild-push-action
       - name: Build and push
