--- a/.github/workflows/1.build-container.yml
+++ b/.github/workflows/1.build-container.yml
@@ -59,4 +59,6 @@ jobs:
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
           subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
+          # TODO: fix this / Error: Invalid image name: ghcr.io/H-Software/isp-net-adminator
+          # temporary disabled
+          push-to-registry: false
