--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -41,7 +41,9 @@
         "illuminate/pagination": "^10.48",
         "evilfreelancer/routeros-api-php": "1.5.2",
         "robmorgan/phinx": "^0.12.10",
-        "open-telemetry/opentelemetry-auto-slim": "^1.0.5"
+        "open-telemetry/opentelemetry-auto-slim": "^1.0.5",
+        "open-telemetry/exporter-otlp": "^1.0.4",
+        "php-http/guzzle7-adapter": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
