--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "config": {
         "allow-plugins": {
-            "kylekatarnls/update-helper": true
+            "kylekatarnls/update-helper": true,
+            "php-http/discovery": false
         }
     },
     "repositories": [
