--- a/.github/workflows/0.checks-adminator3.yml
+++ b/.github/workflows/0.checks-adminator3.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           coverage: none
-          extensions: opentelemetry, grpc
+          extensions: opentelemetry, grpc, protobuf
 
       - name: Print PHP version and extensions
         run: |
