--- a/configs/php/local.ini
+++ b/configs/php/local.ini
@@ -1,3 +1,6 @@
+extension="/usr/local/lib/php/pecl/20220829/protobuf.so"
+extension="/usr/local/lib/php/pecl/20220829/opentelemetry.so"
+[PHP]
 date.timezone = "UTC"
 
 memory_limit = 256M
@@ -15,3 +18,4 @@ error_reporting =  E_ALL & ~E_NOTICE & ~E_WARNING & ~E_STRICT  & ~E_DEPRECATED;
 ; xdebug.remote_port = 9000
 ; xdebug.remote_enable = On
 ; xdebug.remote_connect_back = On
+
