--- a/configs/php/local.ini
+++ b/configs/php/local.ini
@@ -1,3 +1,4 @@
+; /usr/local/etc/php/8.2/php.ini
 extension="/usr/local/lib/php/pecl/20220829/protobuf.so"
 extension="/usr/local/lib/php/pecl/20220829/opentelemetry.so"
 [PHP]
