--- a/configs/php/local.ini
+++ b/configs/php/local.ini
@@ -1,6 +1,10 @@
+;
 ; /usr/local/etc/php/8.2/php.ini
+;
 extension="/usr/local/lib/php/pecl/20220829/protobuf.so"
 extension="/usr/local/lib/php/pecl/20220829/opentelemetry.so"
+extension="/usr/local/lib/php/pecl/20220829/apcu.so"
+
 [PHP]
 date.timezone = "UTC"
 
@@ -20,3 +24,12 @@ error_reporting =  E_ALL & ~E_NOTICE & ~E_WARNING & ~E_STRICT  & ~E_DEPRECATED;
 ; xdebug.remote_enable = On
 ; xdebug.remote_connect_back = On
 
+[CLI Server]
+; Whether the CLI web server uses ANSI color coding in its terminal output.
+cli_server.color = On
+
+[opcache]
+; Determines if Zend OPCache is enabled
+; opcache.enable = 1
+[apc]
+; apc.enabled = 1
