--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "config": {
         "allow-plugins": {
-            "kylekatarnls/update-helper": true
+            "kylekatarnls/update-helper": true,
+            "php-http/discovery": false
         }
     },
     "repositories": [
@@ -40,7 +41,10 @@
         "lloricode/laravel-html-table": "^2.1",
         "illuminate/pagination": "^10.48",
         "evilfreelancer/routeros-api-php": "1.5.2",
-        "robmorgan/phinx": "^0.12.10"
+        "robmorgan/phinx": "^0.12.10",
+        "open-telemetry/opentelemetry-auto-slim": "^1.0.5",
+        "open-telemetry/exporter-otlp": "^1.0.4",
+        "php-http/guzzle7-adapter": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
@@ -86,6 +90,9 @@
         "phpcs": "phpcs -s",
         "cs:check": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots --diff --dry-run",
         "cs:fix": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots",
-        "test": "vendor/phpunit/phpunit/phpunit --colors=always"
+        "test": [
+            "@putenv OTEL_PHP_DISABLED_INSTRUMENTATIONS=slim",
+            "vendor/phpunit/phpunit/phpunit --colors=always"
+        ]
     }
 }
