--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,15 +25,25 @@ services:
     build: .
     # user: "www-data:www-data"
     environment:
-      #
+      # DB conn
       - MYSQL_SERVER=192.168.1.213
       - MYSQL_USER=root
       - MYSQL_PASSWD=isp-net-passwd
-      #
+      # DB conn 2
       - POSTGRES_SERVER=192.168.1.213
       - POSTGRES_USER=adminator
       - POSTGRES_PASSWD=isp-net-passwd
       - POSTGRES_DB=adminator.new
+      # otel
+      - OTEL_PHP_AUTOLOAD_ENABLED=true
+      - OTEL_SERVICE_NAME=isp-adminator3
+      - OTEL_TRACES_EXPORTER=console
+      # - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=none
+      - OTEL_LOGS_EXPORTER=none
+      - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf # grpc
+      - OTEL_EXPORTER_OTLP_ENDPOINT="https://otel_endpoint>"
+      - OTEL_RESOURCE_ATTRIBUTES=service.name=isp-adminator3,application.name=isp-adminator3
     volumes:
       - adminator-php-log:/var/log/php:uid=33,gid=33
       - adminator-tmp:/tmp:/tmp
@@ -49,7 +59,7 @@ services:
       - /var/www/html/adminator2/temp:uid=33,gid=33
       - /var/www/html/adminator3/temp:uid=33,gid=33
       # monolog + some scripts log files
-      - /var/www/html/a3-logs:uid=33,gid=33
+      - /var/www/html/adminator3/logs:uid=33,gid=33
       - /var/www/html/adminator2/log:uid=33,gid=33
       # adminator print
       - /var/www/html/adminator3/print/temp:uid=33,gid=33
