--- a/.github/workflows/2.readme-toc-generation.yml
+++ b/.github/workflows/2.readme-toc-generation.yml
@@ -5,7 +5,7 @@ name: readme-table-of-content-generation
 on:
     push:
       branches: [main]
-      paths: ['adminator3/README.md']
+      paths: ['README.md']
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
       - run: |
           curl https://raw.githubusercontent.com/ekalinin/github-markdown-toc/0.8.0/gh-md-toc -o gh-md-toc
           chmod a+x gh-md-toc
-          ./gh-md-toc --insert --no-backup --hide-footer adminator3/README.md
+          ./gh-md-toc --insert --no-backup --hide-footer README.md
           rm gh-md-toc
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
