--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - /var/www/html/adminator3/print/temp:uid=33,gid=33
       # adminator export xls
       - /var/www/html/adminator2/export:uid=33,gid=33
+      # - /var/www/html/adminator3/export:uid=33,gid=33
     ports:
       - "8080:80"
 
