--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ networks:
 services:
   adminator:
     image: h-software/isp-net-adminator
+    # image: ghcr.io/h-software/isp-net-adminator:pr-137
     build: .
     # user: "www-data:www-data"
     environment:
@@ -65,6 +66,7 @@ services:
       - /var/www/html/adminator3/print/temp:uid=33,gid=33
       # adminator export xls
       - /var/www/html/adminator2/export:uid=33,gid=33
+      # - /var/www/html/adminator3/export:uid=33,gid=33
     ports:
       - "8080:80"
 
