--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -20,5 +20,8 @@ parameters:
 		message: "#^Function (mysql|ereg)_.* not found\\.$#"
 		path: print/*.php
 	-
+		message: "#^Function (mysql|ereg)_.* not found\\.$#"
+		path: app/Core/Print/inc.*.php
+	-
 		message: "#^Function mysql_.* not found\\.$#"
 		path: include/main.function.shared.php
