--- a/adminator3/phpstan-baseline.neon
+++ b/adminator3/phpstan-baseline.neon
@@ -90,10 +90,7 @@ parameters:
 			count: 1
 			path: app/Controllers/archivZmenController.php
 
-		-
-			message: "#^Access to an undefined property App\\\\Controllers\\\\othersController\\:\\:\\$adminator\\.$#"
-			count: 5
-			path: app/Controllers/othersController.php
+
 
 		-
 			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
@@ -127,7 +124,7 @@ parameters:
 
 		-
 			message: "#^Call to an undefined static method App\\\\Models\\\\User\\:\\:where\\(\\)\\.$#"
-			count: 1
+			count: 4
 			path: app/Core/Adminator/Adminator.php
 
 		-
@@ -438,67 +435,62 @@ parameters:
 		-
 			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
 			count: 2
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Parameter \\#4 \\$month of function mktime expects int\\|null, string given\\.$#"
 			count: 6
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Parameter \\#5 \\$day of function mktime expects int\\|null, string given\\.$#"
 			count: 6
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Parameter \\#6 \\$year of function mktime expects int\\|null, string given\\.$#"
 			count: 6
-			path: app/Core/board.php
-
-		-
-			message: "#^Property board\\:\\:\\$container is unused\\.$#"
-			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier '&' in pattern\\: /&lt;/ii&gt;$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier '&' in pattern\\: /&lt;/iu&gt;$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier '&' in pattern\\: /&lt;\\\\//ii&gt;$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier '&' in pattern\\: /&lt;\\\\//iu&gt;$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier '/' in pattern\\: /\\(http\\://\\[\\^ \\]\\+\\\\\\.\\[\\^ \\]\\+\\)/i$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier '\\]' in pattern\\: /\\[\\^/\\]\\(www\\\\\\.\\[\\^ \\]\\+\\\\\\.\\[\\^ \\]\\+\\)/i$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier 'b' in pattern\\: /&lt;/ib&gt;$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^Regex pattern is invalid\\: Unknown modifier 'b' in pattern\\: /&lt;\\\\//ib&gt;$#"
 			count: 1
-			path: app/Core/board.php
+			path: app/Core/Board/board.php
 
 		-
 			message: "#^If condition is always false\\.$#"
@@ -535,25 +527,10 @@ parameters:
 			count: 1
 			path: app/Core/platby.php
 
-		-
-			message: "#^Function ereg not found\\.$#"
-			count: 1
-			path: app/Core/rss.php
-
-		-
-			message: "#^Parameter \\#4 \\$month of function mktime expects int\\|null, string given\\.$#"
-			count: 1
-			path: app/Core/rss.php
-
-		-
-			message: "#^Parameter \\#5 \\$day of function mktime expects int\\|null, string given\\.$#"
-			count: 1
-			path: app/Core/rss.php
-
-		-
-			message: "#^Parameter \\#6 \\$year of function mktime expects int\\|null, string given\\.$#"
-			count: 1
-			path: app/Core/rss.php
+		# -
+		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Core/rss.php
 
 		-
 			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
@@ -694,12 +671,6 @@ parameters:
 			message: "#^Class objektyController not found\\.$#"
 			count: 5
 			path: app/routing.php
-
-		-
-			message: "#^Class othersController not found\\.$#"
-			count: 2
-			path: app/routing.php
-
 
 		-
 			message: "#^Class topologyController not found\\.$#"
