--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ networks:
     # name: playground-monitoring
     external: false
 
-# configs:
-#   collector_conf:
-#     file: ./confs/collector.yml
+configs:
+  collector_conf:
+    file: ./configs/otel-collector/collector.yml
 
 services:
   adminator:
@@ -152,31 +152,25 @@ services:
       - "18728:8728"
       - "18729:8729"
 
-  # otel-collector:
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 125M
-  #   ports:
-  #     - "4317"          # OTLP over gRPC receiver
-  #     - "4318"          # OTLP over HTTP receiver
-  #   # https://hub.docker.com/r/otel/opentelemetry-collector-contrib/tags
-  #   image: otel/opentelemetry-collector-contrib:0.88.0
-  #   configs:
-  #     - source: collector_conf
-  #       target: /conf/collector.yml
-  #   command: ["--config=/conf/collector.yml"]
-  #   # https://docs.docker.com/compose/environment-variables/set-environment-variables/#use-the-environment-attribute
-  #   environment:
-  #     # lightstep stuff
-  #     - LS_ACCESS_TOKEN=${LS_ACCESS_TOKEN}
-  #     # new relic stuff
-  #     # https://docs.newrelic.com/docs/infrastructure/prometheus-integrations/install-configure-remote-write/set-your-prometheus-remote-write-integration/
-  #     - PROMETHEUS_CLUSTER_NAME="k6-playground-prometheus"
-  #     - NEW_RELIC_LICENSE_KEY=${NEW_RELIC_LICENSE_KEY}
-  #   volumes:
-  #     - /:/hostfs
-  #     - "/var/run/docker.sock.raw:/var/run/docker.sock"
+  otel-collector:
+    deploy:
+      resources:
+        limits:
+          memory: 125M
+    ports:
+      - "4317"          # OTLP over gRPC receiver
+      - "4318"          # OTLP over HTTP receiver
+    # https://hub.docker.com/r/otel/opentelemetry-collector-contrib/tags
+    image: otel/opentelemetry-collector-contrib:0.100.0
+    configs:
+      - source: collector_conf
+        target: /conf/collector.yml
+    command: ["--config=/conf/collector.yml"]
+    # https://docs.docker.com/compose/environment-variables/set-environment-variables/#use-the-environment-attribute
+    # environment:
+    volumes:
+      - /:/hostfs
+      - "/var/run/docker.sock.raw:/var/run/docker.sock"
 
 #   grafana:
 #     labels:
