--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,11 @@ services:
       # otel
       - OTEL_PHP_AUTOLOAD_ENABLED=true
       - OTEL_SERVICE_NAME=isp-adminator3
-      - OTEL_TRACES_EXPORTER=console
-      # - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_TRACES_EXPORTER=otlp # otlp OR console
       - OTEL_METRICS_EXPORTER=none
       - OTEL_LOGS_EXPORTER=none
-      - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf # grpc
-      - OTEL_EXPORTER_OTLP_ENDPOINT="https://otel_endpoint>"
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc # grpc OR http/protobuf
+      - OTEL_EXPORTER_OTLP_ENDPOINT="http://192.168.1.213:4327"
       - OTEL_RESOURCE_ATTRIBUTES=service.name=isp-adminator3,application.name=isp-adminator3
     volumes:
       - adminator-php-log:/var/log/php:uid=33,gid=33
