--- a/configs/otel-collector/collector.yml
+++ b/configs/otel-collector/collector.yml
@@ -52,21 +52,21 @@ receivers:
       filesystem:
     root_path: /hostfs
 
-#   prometheus:
-#     config:
-#       global:
-#         scrape_interval: 10s
-#         scrape_timeout: 5s
-#         evaluation_interval: 10s
-#       scrape_configs:
-# #        - job_name: 'otel-collector'
-# #          scrape_interval: 15s
-# #          static_configs:
-# #            - targets: ['localhost:8888']
-# #        - job_name: 'grafana'
-# #          scrape_interval: 15s
-# #          static_configs:
-# #            - targets: ['grafana:3000']
+  prometheus:
+    config:
+      global:
+        scrape_interval: 10s
+        scrape_timeout: 5s
+        evaluation_interval: 10s
+      scrape_configs:
+       - job_name: 'otel-collector'
+         scrape_interval: 15s
+         static_configs:
+           - targets: ['localhost:8888']
+#        - job_name: 'grafana'
+#          scrape_interval: 15s
+#          static_configs:
+#            - targets: ['grafana:3000']
 #         # https://prometheus.io/docs/prometheus/latest/federation/
 #         - job_name: 'federate'
 #           scrape_interval: 5s
