--- a/configs/otel-collector/collector.yml
+++ b/configs/otel-collector/collector.yml
@@ -11,6 +11,11 @@ extensions:
     client_auth:
       username: 734682
       password: ${env:GRAFANA_CLOUD_KEY}
+  health_check:
+  pprof:
+  zpages:
+  memory_ballast:
+    size_mib: 512
 
 receivers:
   otlp:
