--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,7 @@ services:
     ports:
       - "4317"          # OTLP over gRPC receiver
       - "4318"          # OTLP over HTTP receiver
+      - "8888:8888"     # metrics
       - "1888:1888"     # pprof extension
       - "13133:13133"   # health_check extension
     # https://hub.docker.com/r/otel/opentelemetry-collector-contrib/tags
