--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -38,6 +38,8 @@
         "robmorgan/phinx": "^0.12.10",
         "open-telemetry/opentelemetry-auto-slim": "^1.0.5",
         "open-telemetry/exporter-otlp": "^1.0.4",
+        "open-telemetry/detector-container": "^1.0.0",
+        "open-telemetry/transport-grpc": "^1.0.0",
         "php-http/guzzle7-adapter": "^1.0.0",
         "amnuts/opcache-gui": "^3.5.4"
     },
